--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - echo Installing dependencies...
       - pip install -r requirements.txt
       - apt-get update
-      - apt-get install -y python-dev
+      # - apt-get install -y python-dev
 
   pre_build:
     commands:
