--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,9 @@ phases:
       - curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
       - chmod +x ./kubectl
       - mv ./kubectl /usr/local/bin
+      - aws configure list
+      - echo "Kubeconfig file contents:"
+      - cat /root/.kube/config  # Check the kubeconfig file location
       - aws eks update-kubeconfig --region us-east-1 --name Flask-cluster
       - kubectl config view
 
