--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - echo Installing dependencies...
       - yum update -y
-      - aws s3 ls
+      - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
       - curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.18.9/2020-11-02/bin/linux/amd64/kubectl
       - chmod +x ./kubectl
       - mv ./kubectl /usr/local/bin
@@ -21,5 +21,8 @@ phases:
     commands:
       - git clone https://github.com/sabouf1/AWS-Serverless-Mini-Project
       - cd AWS-Serverless-Mini-Project
+      - docker build -t thedictator10/flask-app:latest .
+      - echo Docker image built successfully.
+      - docker push thedictator10/flask-app:latest
       - kubectl apply -f flask-app-deployment.yaml
       - kubectl apply -f flask-app-service.yaml
